--- a/Index.html
+++ b/Index.html
@@ -22,8 +22,8 @@
             
             <nav class="nav-links">
                 <a href="index.html" class="nav-pill active">Home</a>
-                <a href="BrowseMenu.html" class="nav-item">Browse Menu</a>
-                <a href="OurTeam.html" class="nav-item">Our Team</a>
+                <a href="browseMenu.html" class="nav-item">Browse Menu</a>
+                <a href="ourTeam.html" class="nav-item">Our Team</a>
                 <a href="layanan.html" class="nav-item">Layanan</a>
                 <a href="testimoni.html" class="nav-item">Testimoni</a>
             </nav>
