--- a/Layanan.html
+++ b/Layanan.html
@@ -20,8 +20,8 @@
             </div>
             <nav class="nav-links">
                 <a href="index.html" class="nav-item">Home</a>
-                <a href="BrowseMenu.html" class="nav-item">Browse Menu</a>
-                <a href="OurTeam.html" class="nav-item">Our Team</a>
+                <a href="browseMenu.html" class="nav-item">Browse Menu</a>
+                <a href="ourTeam.html" class="nav-item">Our Team</a>
                 <a href="layanan.html" class="nav-pill active">Layanan</a>
                 <a href="testimoni.html" class="nav-item">Testimoni</a>
             </nav>
