--- a/OurTeam.html
+++ b/OurTeam.html
@@ -21,10 +21,10 @@
             </div>
             <nav class="nav-links">
                 <a href="index.html" class="nav-item">Home</a>
-                <a href="BrowseMenu.html" class="nav-item">Browse Menu</a>
-                <a href="OurTeam.html" class="nav-pill active">Our Team</a>
-                <a href="Layanan.html" class="nav-item">Layanan</a>
-                <a href="Testimoni.html" class="nav-item">Testimoni</a>
+                <a href="browseMenu.html" class="nav-item">Browse Menu</a>
+                <a href="ourTeam.html" class="nav-pill active">Our Team</a>
+                <a href="layanan.html" class="nav-item">Layanan</a>
+                <a href="testimoni.html" class="nav-item">Testimoni</a>
             </nav>
             <div class="header-btns">
                 <a href="https://wa.me/6281995223741" target="_blank" class="btn btn-nav-wa">
