--- a/BrowseMenu.html
+++ b/BrowseMenu.html
@@ -21,8 +21,8 @@
             </div>
             <nav class="nav-links">
                 <a href="index.html" class="nav-item">Home</a>
-                <a href="BrowseMenu.html" class="nav-pill active">Browse Menu</a>
-                <a href="OurTeam.html" class="nav-item">Our Team</a>
+                <a href="browseMenu.html" class="nav-pill active">Browse Menu</a>
+                <a href="ourTeam.html" class="nav-item">Our Team</a>
                 <a href="layanan.html" class="nav-item">Layanan</a>
                 <a href="testimoni.html" class="nav-item">Testimoni</a>
             </nav>
