--- a/Testimoni.html
+++ b/Testimoni.html
@@ -20,10 +20,10 @@
             </div>
             <nav class="nav-links">
                 <a href="index.html" class="nav-item">Home</a>
-                <a href="BrowseMenu.html" class="nav-item">Browse Menu</a>
-                <a href="OurTeam.html" class="nav-item">Our Team</a>
+                <a href="browseMenu.html" class="nav-item">Browse Menu</a>
+                <a href="ourTeam.html" class="nav-item">Our Team</a>
                 <a href="layanan.html" class="nav-item">Layanan</a>
-                <a href="Testimoni.html" class="nav-pill active">Testimoni</a>
+                <a href="testimoni.html" class="nav-pill active">Testimoni</a>
             </nav>
             <div class="header-btns">
                 <a href="https://wa.me/6281995223741" target="_blank" class="btn btn-nav-wa">
