--- a/ourTeam.html
+++ b/ourTeam.html
@@ -52,7 +52,7 @@
             <!-- Staff 1 -->
             <div class="team-card">
                 <div class="team-photo-wrapper">
-                    <img src="https://i.pravatar.cc/400?u=jun" class="team-img">
+                    <img src="image 14.png" class="team-img">
                     <div class="team-label">
                         <h4>Jun Wo</h4>
                         <span>Chef & Founder</span>
@@ -69,7 +69,7 @@
             <!-- Staff 2 -->
             <div class="team-card">
                 <div class="team-photo-wrapper">
-                    <img src="https://i.pravatar.cc/400?u=siti" class="team-img">
+                    <img src="image 15.png" class="team-img">
                     <div class="team-label"><h4>Siti Nurhaliza</h4><span>Operations Manager</span></div>
                 </div>
                 <div class="team-bio">
@@ -83,7 +83,7 @@
             <!-- Staff 3 -->
             <div class="team-card">
                 <div class="team-photo-wrapper">
-                    <img src="https://i.pravatar.cc/400?u=naila" class="team-img">
+                    <img src="image 17 (1).png" class="team-img">
                     <div class="team-label"><h4>Naila</h4><span>Head Chef</span></div>
                 </div>
                 <div class="team-bio">
@@ -97,7 +97,7 @@
             <!-- Baris 2 -->
             <div class="team-card">
                 <div class="team-photo-wrapper">
-                    <img src="https://i.pravatar.cc/400?u=mike" class="team-img">
+                    <img src="image 17.png" class="team-img">
                     <div class="team-label"><h4>Michael Chen</h4><span>Executive Chef</span></div>
                 </div>
                 <div class="team-bio">
@@ -110,7 +110,7 @@
             </div>
             <div class="team-card">
                 <div class="team-photo-wrapper">
-                    <img src="https://i.pravatar.cc/400?u=ratna" class="team-img">
+                    <img src="image 18.png" class="team-img">
                     <div class="team-label"><h4>Ratna Dewi</h4><span>Event Coordinator</span></div>
                 </div>
                 <div class="team-bio">
@@ -123,7 +123,7 @@
             </div>
             <div class="team-card">
                 <div class="team-photo-wrapper">
-                    <img src="https://i.pravatar.cc/400?u=andi" class="team-img">
+                    <img src="image 19.png" class="team-img">
                     <div class="team-label"><h4>Andi Pratama</h4><span>Quality Control</span></div>
                 </div>
                 <div class="team-bio">
