--- a/layanan.html
+++ b/layanan.html
@@ -237,11 +237,11 @@
             <div class="f-col links">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="Index.html">&rarr; Home</a></li>
-                    <li><a href="BrowseMenu.html">&rarr; Browse Menu</a></li>
-                    <li><a href="OurTeam.html">&rarr; Our Team</a></li>
-                    <li><a href="Layanan.html">&rarr; Layanan</a></li>
-                    <li><a href="Testimoni.html">&rarr; Testimoni</a></li>
+                    <li><a href="index.html">&rarr; Home</a></li>
+                    <li><a href="browseMenu.html">&rarr; Browse Menu</a></li>
+                    <li><a href="ourTeam.html">&rarr; Our Team</a></li>
+                    <li><a href="layanan.html">&rarr; Layanan</a></li>
+                    <li><a href="testimoni.html">&rarr; Testimoni</a></li>
                 </ul>
             </div>
             <div class="f-col svcs">
